load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
# Hermetic sqlx binary compiled from tools/sqlx-cli via the crate_index.
# Bazel caches and invalidates this like any other rust_binary target.
rust_binary(
    name = "sqlx_bin",
    srcs = ["sqlx-cli/src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:private"],
    deps = [
        "@crates//:clap",
        "@crates//:console",
        "@crates//:sqlx-cli",
        "@crates//:tokio",
    ],
)

# Run the hermetic sqlx binary.
# DATABASE_URL must be set (or present in .env) for prepare / migrate.
#   bazel run //tools:sqlx -- prepare --workspace-root services/causes_api
#   bazel run //tools:sqlx -- migrate run
sh_binary(
    name = "sqlx",
    srcs = ["sqlx.sh"],
    data = [
        ":sqlx_bin",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Run the hermetic cargo binary from the rules_rs toolchain.
# RUSTC is set to the hermetic rustc so that cargo subcommands that
# probe the toolchain (e.g. fetch, metadata) work without a host rustc
# on PATH.
#   bazel run //tools:cargo -- generate-lockfile
#   bazel run //tools:cargo -- fetch
#   bazel run //tools:cargo -- metadata
#   bazel run //tools:cargo -- tree
# For compilation (check/build/test) use: bazel build //services/...
sh_binary(
    name = "cargo",
    srcs = ["cargo.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustc binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustc -- --version
sh_binary(
    name = "rustc",
    srcs = ["rustc.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustfmt binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustfmt -- --check services/causes_api/src/main.rs
#        bazel run //tools:rustfmt -- services/causes_api/src/main.rs
sh_binary(
    name = "rustfmt",
    srcs = ["rustfmt.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustfmt",
    ],
)

# Verify all three wrappers resolve and report the expected toolchain version.
# Run with: bazel test //tools:toolchain_versions_test
sh_test(
    name = "toolchain_versions_test",
    srcs = ["toolchain_versions_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
        "@rust_host_tools//:rustfmt",
    ],
)
