load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "proto_gen_impl.sh",
    "sqlx_prepare_impl.sh",
])

# Render the most recent bazel coverage report as HTML and serve it.
# Usage: bazel coverage //... && bazel run //tools:show_coverage
py_binary(
    name = "show_coverage",
    srcs = ["show_coverage.py"],
    main = "show_coverage.py",
)

# Hermetic sqlx binary compiled from tools/sqlx-cli via the crate_index.
# Bazel caches and invalidates this like any other rust_binary target.
rust_binary(
    name = "sqlx_bin",
    srcs = ["sqlx-cli/src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:clap",
        "@crates//:console",
        "@crates//:sqlx-cli",
        "@crates//:tokio",
    ],
)

# Run the hermetic sqlx binary.
# DATABASE_URL must be set (or present in .env) for prepare / migrate.
#   bazel run //tools:sqlx -- prepare --workspace-root services/causes_api
#   bazel run //tools:sqlx -- migrate run
sh_binary(
    name = "sqlx",
    srcs = ["sqlx.sh"],
    data = [
        ":sqlx_bin",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Run the hermetic cargo binary from the rules_rs toolchain.
# RUSTC is set to the hermetic rustc so that cargo subcommands that
# probe the toolchain (e.g. fetch, metadata) work without a host rustc
# on PATH.
#   bazel run //tools:cargo -- generate-lockfile
#   bazel run //tools:cargo -- fetch
#   bazel run //tools:cargo -- metadata
#   bazel run //tools:cargo -- tree
# For compilation (check/build/test) use: bazel build //services/...
sh_binary(
    name = "cargo",
    srcs = ["cargo.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustc binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustc -- --version
sh_binary(
    name = "rustc",
    srcs = ["rustc.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustfmt binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustfmt -- --check services/causes_api/src/main.rs
#        bazel run //tools:rustfmt -- services/causes_api/src/main.rs
sh_binary(
    name = "rustfmt",
    srcs = ["rustfmt.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustfmt",
    ],
)

# Generate Rust code from proto definitions using hermetic protoc + tonic-build.
# Usage: bazel run //tools:proto_gen
sh_binary(
    name = "proto_gen",
    srcs = ["proto_gen_impl.sh"],
    data = [
        "//proto:proto_srcs",
        "//tools/proto-gen:proto_gen",
        "@bazel_tools//tools/bash/runfiles",
        "@protobuf//:protoc",
        "@rust_host_tools//:rustfmt",
    ],
)

# Golden-file staleness check.  The proto_gen binary in data is instrumented
# under `bazel coverage`, which makes collect_cc_coverage.sh try the LLVM
# profdata path.  Override GENERATE_LLVM_LCOV so it falls through to the
# gcov no-op path — there is no Rust coverage to collect from a shell test.
sh_test(
    name = "proto_gen_test",
    srcs = ["proto_gen_impl.sh"],
    args = ["--check"],
    data = [
        "//:Cargo.toml",
        "//lib/rust/causes_proto:gen_srcs",
        "//proto:proto_srcs",
        "//tools/proto-gen:proto_gen",
        "@bazel_tools//tools/bash/runfiles",
        "@protobuf//:protoc",
        "@rust_host_tools//:rustfmt",
    ],
)

# Verify all three wrappers resolve and report the expected toolchain version.
# Run with: bazel test //tools:toolchain_versions_test
sh_test(
    name = "toolchain_versions_test",
    srcs = ["toolchain_versions_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
        "@rust_host_tools//:rustfmt",
    ],
)
