load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/lint:linters.bzl", "markdown_lint_test")

exports_files(["testfixture.sh"])

# Repack the theseus-rs PostgreSQL 17 tarball (which has a versioned top-level
# directory) into a flat tar.gz so the fixture can extract it at a fixed path.
# Output: bazel-bin/infra/postgres/postgres.tar.gz — bin/, lib/, share/, …
# Test targets unpack this into $TEST_TMPDIR at runtime.
genrule(
    name = "postgres_binaries",
    srcs = ["@postgresql_linux_amd64//file:postgresql.tar.gz"],
    outs = ["postgres.tar.gz"],
    cmd = """
        TMPDIR=$$(mktemp -d)
        tar -xzf $(location @postgresql_linux_amd64//file:postgresql.tar.gz) \
            -C $$TMPDIR --strip-components=1
        tar czf $@ -C $$TMPDIR .
        rm -rf $$TMPDIR
    """,
    visibility = ["//visibility:public"],
)

# Extract the psql binary from the postgres tarball so Bazel caches it
# and invalidates automatically when the tarball changes.
genrule(
    name = "psql_extracted",
    srcs = [":postgres_binaries"],
    outs = ["postgres_psql"],
    cmd = "tar -xzf $< -C $(@D) --strip-components=2 ./bin/psql && mv $(@D)/psql $(@D)/postgres_psql",
)

# Interactive psql wrapper for local debugging: bazel run //infra/postgres:psql -- <args>
sh_binary(
    name = "psql",
    srcs = ["psql.sh"],
    data = [
        ":psql_extracted",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Self-test: verifies that pg_start brings up a reachable PostgreSQL instance.
# Run with: bazel test //infra/postgres:testfixture_test
sh_test(
    name = "testfixture_test",
    srcs = ["testfixture_test.sh"],
    data = [
        "testfixture.sh",
        ":postgres_binaries",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

markdown_lint_test(
    name = "pymarkdown",
    srcs = ["README.md"],
)
