load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/lint:format_check.bzl", "format_srcs")
load("//tools/lint:linters.bzl", "markdown_lint_test")
load(":defs.bzl", "extract_tarball")

exports_files(["testfixture.sh"])

# Extract the theseus-rs PostgreSQL 17 tarball into a directory TreeArtifact
# at build time.  Consumers use rlocation _main/infra/postgres/postgres_extracted
# to get the root; binaries find shared libraries (libpq.so.5 etc.) via the
# RPATH embedded in the tarball build ($ORIGIN/../lib relative to bin/).
extract_tarball(
    name = "postgres_extracted",
    src = "@postgresql_linux_amd64//file:postgresql.tar.gz",
    visibility = ["//visibility:public"],
)

# Interactive psql wrapper for local debugging: bazel run //infra/postgres:psql -- <args>
sh_binary(
    name = "psql",
    srcs = ["psql.sh"],
    data = [
        ":postgres_extracted",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Self-test: verifies that pg_start brings up a reachable PostgreSQL instance.
# Run with: bazel test //infra/postgres:testfixture_test
sh_test(
    name = "testfixture_test",
    srcs = ["testfixture_test.sh"],
    data = [
        "testfixture.sh",
        ":postgres_extracted",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Verify the bundled psql binary runs (shared libs must be present alongside it).
sh_test(
    name = "psql_test",
    srcs = ["psql_test.sh"],
    data = [
        ":postgres_extracted",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

markdown_lint_test(
    name = "pymarkdown",
    srcs = ["README.md"],
)

format_srcs()
