load("//tools/lint:format_check.bzl", "format_srcs")
load("//tools/lint:linters.bzl", "markdown_lint_test")

# The hermetic TLC runner script — invoked by tla_test rules across the repo.
exports_files(["run_tlc.sh"])

format_srcs()

markdown_lint_test(
    name = "pymarkdown",
    srcs = ["README.md"],
)
