load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_binary(
    name = "causes_api",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//lib/rust/api_db",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:dotenvy",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry_sdk",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tonic-health",
        "@crates//:tracing",
        "@crates//:tracing-opentelemetry",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "causes_api_test",
    crate = ":causes_api",
    deps = [
        "@crates//:wiremock",
    ],
)
