load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//build:rust.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "causes_api",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//lib/rust/api_db",
        "//lib/rust/causes_proto",
        "@crates//:anyhow",
        "@crates//:axum",
        "@crates//:clap",
        "@crates//:dotenvy",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost-types",
        "@crates//:reqwest",
        "@crates//:rustls-acme",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tonic-health",
        "@crates//:tracing",
        "@crates//:tracing-opentelemetry",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "causes_api_test",
    crate = ":causes_api",
    deps = [
        "@crates//:mockall",
        "@crates//:tower",
        "@crates//:wiremock",
    ],
)

tar(
    name = "layer",
    srcs = [":causes_api"],
    mtree = ["causes_api uid=0 gid=0 mode=0755 type=file content=$(location :causes_api)"],
)

oci_image(
    name = "image",
    base = "@distroless_cc_debian13",
    entrypoint = ["/causes_api"],
    exposed_ports = ["50051/tcp"],
    tars = [":layer"],
)

oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["causes-api:latest"],
)

filegroup(
    name = "image_tarball",
    srcs = [":image_load"],
    output_group = "tarball",
)
