[package]
name = "causes_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api_db = { path = "../../lib/rust/api_db" }
causes_proto = { path = "../../lib/rust/causes_proto" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum.workspace = true
rustls-acme.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
dotenvy.workspace = true

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
