load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_binary(
    name = "causes_cli",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//lib/rust/causes_proto",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "causes_cli_test",
    crate = ":causes_cli",
)
