load("//build:rust.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "causes_cli",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//lib/rust/causes_mcp",
        "//lib/rust/causes_proto",
        "//lib/rust/causes_session",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:rmcp",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "causes_cli_test",
    crate = ":causes_cli",
    deps = [
        "@crates//:tempfile",
    ],
)
