[package]
name = "causes_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
causes_proto = { path = "../../lib/rust/causes_proto" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true
