[package]
name    = "instance-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace               = true
tonic.workspace               = true
prost.workspace               = true
sqlx.workspace                = true
reqwest.workspace             = true
clap.workspace                = true
serde.workspace               = true
serde_json.workspace          = true
anyhow.workspace              = true
tracing.workspace             = true
tracing-subscriber.workspace  = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace       = true
opentelemetry_sdk.workspace   = true
opentelemetry-otlp.workspace  = true
dotenvy.workspace             = true
uuid.workspace                = true
