load("@rules_python//python:defs.bzl", "py_test")
load(
    "@rules_python//python/entry_points:py_console_script_binary.bzl",
    "py_console_script_binary",
)
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":format_check.bzl", "format_srcs")

package(default_visibility = ["//visibility:public"])

# ── yamllint ──────────────────────────────────────────────────────────────────
# Hermetic yamllint binary via pip/rules_python.
# Used by the yamllint_lint_test aspect defined in linters.bzl.
py_console_script_binary(
    name = "yamllint",
    pkg = "@pip//yamllint",
    script = "yamllint",
)

# ── pymarkdown ────────────────────────────────────────────────────────────────
# Hermetic pymarkdown binary via pip/rules_python.
# Used by the markdown_lint_test macro defined in linters.bzl.
py_console_script_binary(
    name = "pymarkdown",
    pkg = "@pip//pymarkdownlnt",
    script = "pymarkdown",
)

exports_files([
    "run_pymarkdown.sh",
    "run_rustfmt_check.sh",
    "run_buildifier_check.sh",
    "run_ruff_check.sh",
    "run_ruff_format.sh",
    "run_taplo_check.sh",
    "run_shfmt_check.sh",
    "run_yamlfmt_check.sh",
])

sh_binary(
    name = "run_pymarkdown",
    srcs = ["run_pymarkdown.sh"],
    data = [
        ":pymarkdown",
        "//:.pymarkdown.json",
        "@bazel_tools//tools/bash/runfiles",
        "@rules_shell//shell/runfiles",
    ],
)

# ── ruff (Python format + lint) ───────────────────────────────────────────────
# Wrapper used by format_multirun's `python = ...` slot.  Runs `ruff format`
# AND `ruff check --fix` so a single `bazel run //:format` covers whitespace
# formatting and import sorting in one pass.  See run_ruff_format.sh.
sh_binary(
    name = "ruff_format",
    srcs = ["run_ruff_format.sh"],
    data = [
        "//:pyproject.toml",
        "@aspect_rules_lint//format:ruff",
        "@bazel_tools//tools/bash/runfiles",
        "@rules_shell//shell/runfiles",
    ],
)

# ── taplo (TOML formatter) ────────────────────────────────────────────────────
# Decompresses the hermetic taplo gz download into an executable binary.
# Update the http_file in MODULE.bazel to upgrade taplo.
genrule(
    name = "taplo_extracted",
    srcs = ["@taplo_linux_amd64//file"],
    outs = ["taplo_bin"],
    cmd = "gzip -dc $< > $@ && chmod +x $@",
)

# Thin wrapper so format_multirun can use taplo as an executable label.
# All arguments are forwarded to the real taplo binary.
sh_binary(
    name = "taplo",
    srcs = ["taplo.sh"],
    data = [
        ":taplo_extracted",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# ── cargo/bazel dep parity check ──────────────────────────────────────────────
# Guards against silent drift where BUILD.bazel adds a @crates//:foo dep but
# the sibling Cargo.toml doesn't list it — which leaves Bazel green but `cargo`
# spuriously broken.  Reuses each Rust crate's existing format_srcs filegroups
# so no new exports are needed; the script filters runfiles by file name.
_RUST_CRATE_PACKAGES = [
    "//lib/rust/api_db",
    "//lib/rust/causes_mcp",
    "//lib/rust/causes_proto",
    "//lib/rust/causes_session",
    "//lib/rust/proto_ext",
    "//services/causes_api",
    "//services/causes_cli",
]

py_test(
    name = "cargo_bazel_deps_check",
    srcs = ["check_cargo_bazel_deps.py"],
    args = [
        "$(rootpaths %s:%s)" % (pkg, fg)
        for pkg in _RUST_CRATE_PACKAGES
        for fg in ("toml_format_srcs", "starlark_format_srcs")
    ],
    data = [
        "%s:%s" % (pkg, fg)
        for pkg in _RUST_CRATE_PACKAGES
        for fg in ("toml_format_srcs", "starlark_format_srcs")
    ],
    main = "check_cargo_bazel_deps.py",
)

format_srcs()
