load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

rust_library(
    name = "api_db",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(
        [".sqlx/**"],
        allow_empty = True,
    ),
    rustc_env = {"SQLX_OFFLINE": "true"},
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:sqlx",
        "@crates//:tracing",
    ],
)

# Compiled test binary — invoked by api_db_db_test (sh_test wrapper below).
# Tagged manual so Bazel never runs it directly; always use the wrapper, which
# spins up a hermetic postgres before running this binary.
rust_test(
    name = "api_db_test",
    compile_data = glob(
        [".sqlx/**"],
        allow_empty = True,
    ),
    crate = ":api_db",
    rustc_env = {"SQLX_OFFLINE": "true"},
    tags = ["manual"],
    deps = [
        "@crates//:tokio",
    ],
)

# Hermetic database test: spins up a throwaway PostgreSQL from the bundled
# tarball, then runs the Rust test binary with DATABASE_URL pointed at it.
sh_test(
    name = "api_db_db_test",
    srcs = ["db_test.sh"],
    args = ["$(location :api_db_test)"],
    data = [
        ":api_db_test",
        "//infra/postgres:postgres_extracted",
        "//infra/postgres:testfixture.sh",
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:llvm_cov",
        "@rust_host_tools//:llvm_profdata",
    ],
)
