load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//build:rust.bzl", "rust_library", "rust_test")
load("//tools:sqlx_prepare.bzl", "sqlx_prepare")
load("//tools/lint:format_check.bzl", "format_srcs")

rust_library(
    name = "api_db",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(
        [
            ".sqlx/**",
            "migrations/**",
        ],
        allow_empty = True,
    ),
    proc_macro_deps = [
        "//lib/rust/api_db_macros",
    ],
    rustc_env = {"SQLX_OFFLINE": "true"},
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:arc-swap",
        "@crates//:aws-config",
        "@crates//:aws-sdk-rds",
        "@crates//:aws-types",
        "@crates//:email_address",
        "@crates//:futures",
        "@crates//:sqlx",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:url",
        "@crates//:uuid",
    ],
)

# Compiled test binary — invoked by api_db_db_test (sh_test wrapper below).
# Tagged manual so Bazel never runs it directly; always use the wrapper, which
# spins up a hermetic postgres before running this binary.
rust_test(
    name = "api_db_test",
    compile_data = glob(
        [
            ".sqlx/**",
            "migrations/**",
        ],
        allow_empty = True,
    ),
    crate = ":api_db",
    rustc_env = {"SQLX_OFFLINE": "true"},
    tags = ["manual"],
    deps = [
        "@crates//:aws-credential-types",
        "@crates//:aws-smithy-async",
        "@crates//:tokio",
    ],
)

# Shared test data for the hermetic database test wrappers.
_DB_TEST_DATA = [
    ":api_db_test",
    "//infra/postgres:postgres_extracted",
    "//infra/postgres:testfixture.sh",
    "@bazel_tools//tools/bash/runfiles",
    "@rust_host_tools//:llvm_cov",
    "@rust_host_tools//:llvm_profdata",
]

# Hermetic database test: spins up a throwaway PostgreSQL from the bundled
# tarball, then runs the Rust test binary with DATABASE_URL pointed at it.
# $1/$2 are rlocation paths to llvm-profdata/llvm-cov so coverage mode can
# find them without hard-coding where @llvm ships them.
sh_test(
    name = "api_db_db_test",
    srcs = ["db_test.sh"],
    args = [
        "$(rlocationpath @rust_host_tools//:llvm_profdata)",
        "$(rlocationpath @rust_host_tools//:llvm_cov)",
        "$(location :api_db_test)",
    ],
    data = _DB_TEST_DATA,
)

# Manual-only performance scaling test — not included in CI.
# Run: bazel test //lib/rust/api_db:scaling_test --test_output=streamed
sh_test(
    name = "scaling_test",
    size = "enormous",
    srcs = ["db_test.sh"],
    args = [
        "$(rlocationpath @rust_host_tools//:llvm_profdata)",
        "$(rlocationpath @rust_host_tools//:llvm_cov)",
        "$(location :api_db_test)",
        "list_projects_scaling",
        "--nocapture",
    ],
    data = _DB_TEST_DATA,
    env = {"RUN_SCALING_TESTS": "1"},
    tags = ["manual"],
)

# Golden file targets — regenerates or checks the committed .sqlx/ files.
# Run `bazel run //lib/rust/api_db:sqlx_prepare` to update .sqlx/ in the source tree.
# `bazel test //lib/rust/api_db:sqlx_prepare_test` fails if the files are stale.
sqlx_prepare(
    name = "sqlx_prepare",
    srcs = glob(["src/**/*.rs"]) + glob(
        [".sqlx/**"],
        allow_empty = True,
    ),
    migrations = glob(["migrations/**"]),
    sibling_deps = [
        "//lib/rust/api_db_macros:sqlx_prepare_sources",
    ],
    test_migrations = glob(
        ["migrations-test/**"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

format_srcs()
