[package]
name = "api_db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api_db_macros = { path = "../api_db_macros" }
sqlx.workspace = true
futures.workspace = true
anyhow.workspace = true
uuid.workspace = true
url.workspace = true
email_address.workspace = true
tracing.workspace = true
arc-swap.workspace = true
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-types.workspace = true
tokio.workspace = true

[dev-dependencies]
aws-credential-types.workspace = true
aws-smithy-async.workspace = true
rand.workspace = true
