[package]
name = "api_db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
futures.workspace = true
anyhow.workspace = true
uuid.workspace = true
url.workspace = true
email_address.workspace = true
tracing.workspace = true
arc-swap.workspace = true
tokio.workspace = true
