[package]
name = "api_db_aws"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api_db = { path = "../api_db" }
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-types.workspace = true
futures.workspace = true

[dev-dependencies]
aws-credential-types.workspace = true
aws-smithy-async.workspace = true
tokio.workspace = true
