load("//build:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "causes_mcp",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lib/rust/causes_proto",
        "@crates//:anyhow",
        "@crates//:rmcp",
        "@crates//:schemars",
        "@crates//:serde",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "causes_mcp_test",
    crate = ":causes_mcp",
)
