[package]
name = "causes_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
causes_proto = { path = "../causes_proto" }
anyhow.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
